--- a/Configure/TestConfig.ini
+++ b/Configure/TestConfig.ini
@@ -3,6 +3,6 @@ test_int = 99
 test_float = 0.1
 test_string = Hello, World
 test_list = [1, 2, 3]
-test_tuple = (1, 2, 3)
-test_dict = {"x":1.0, "y":2.0}
+test_tuple = (4, 5, 6)
+test_dict = {'y': 8.0, 'x': 7.0}
 
