--- a/Configure/Config.ini
+++ b/Configure/Config.ini
@@ -1,11 +1,11 @@
 [Screen]
-size = [920, 525]
+size = [1053, 557]
 position = [0, 0]
 
 [Camera]
 fov = 45
 near = 0.1
 far = 100
-velocity = 10.0
-rotation = 0.10
+pan_speed = 10.0
+rotation_speed = 10.0
 
