--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy
-Pillow
-pygame
-pyglet
-PyOpenGL
-PyOpenGL-accelerate
+numpy==1.18.0
+Pillow==7.0.0
+pygame==1.9.6
+pyglet==1.4.9
+PyOpenAL==0.7.11a1
+PyOpenGL==3.1.4
+PyOpenGL-accelerate==3.1.4
