--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.22.3
-Pillow==9.1.0
-pygame==2.1.2
-pyglet==1.5.23
-PyOpenAL==0.7.11a1
-PyOpenGL==3.1.6
-PyOpenGL-accelerate==3.1.6
+numpy>=1.26.1
+Pillow>=10.1.0
+pygame>=2.5.2
+pyglet>=2.0.9
+PyOpenAL>=0.7.11a1
+PyOpenGL>=3.1.7
+PyOpenGL-accelerate>=3.1.7
